# synthdb

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  aviation_final.sql  kitchen_sink.sql  ks_fix.sql  ks_v2.sql  requirements-dev.txt  requirements.txt  setup.py
src/: generator.rs  main.rs  schema.rs  sorter.rs
