[package]
name = "synthdb"
version = "0.1.0"
edition = "2021"
description = "Production-grade synthetic data generator for PostgreSQL. Zero config. Single binary."
license = "MIT"
repository = "https://github.com/synthdb/synthdb"
homepage = "https://github.com/synthdb/synthdb"
readme = "README.md"
keywords = ["database", "postgres", "synthetic-data", "testing", "seeding"]
categories = ["command-line-utilities", "development-tools::testing"]
[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Database (The "Eyes")
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json"] }

# CLI Interface (The "Face")
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17" # Progress bars
console = "0.15"   # Terminal colors

# Serialization (The "Memory")
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math & Randomness (The "Brain")
rand = "0.8"
rand_distr = "0.4"
regex = "1.9"
anyhow = "1.0"

# Smart Seeding (The "Vibe")
fake = { version = "2.9", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
petgraph = "0.6"
futures = "0.3" # For parallel async execution