[package]
name = "synthdb"
version = "0.1.2" 
edition = "2021"
description = "Production-grade synthetic data generator for PostgreSQL. Zero config. Single binary."
license = "MIT"
repository = "https://github.com/synthdb/synthdb"
homepage = "https://github.com/synthdb/synthdb"
readme = "README.md"
keywords = ["database", "postgres", "synthetic-data", "testing", "seeding"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json"] }

# CLI & UI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
inquire = "0.7"

# Core Logic
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
futures = "0.3"
anyhow = "1.0"

# Randomness & Data
rand = "0.8"
rand_distr = "0.4"
regex = "1.9"
fake = { version = "2.9", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.4", features = ["v4", "fast-rng"] }